fixed background overflow
background is now fixed to screen hight & cover whole screen in all types of screens

--- a/css/home.css
+++ b/css/home.css
@@ -7,11 +7,9 @@
 }
 body {
   background-image: url(../images/southIndianThali.jpg);
-  /* background-image: url(../images/Veggies.jpg); */
-
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: fixed;
+  background-attachment: fixed;
   height: 100vh;
 
   display: block;
