--- a/css/recipes.css
+++ b/css/recipes.css
@@ -9,7 +9,8 @@ body {
   background-image: url(../images/veggiesOnChoppingBoard.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: fixed;
+  background-attachment: fixed;
+  height: 100vh;
 }
 h1 {
   font-size: 3em;
